--- a/home.html
+++ b/home.html
@@ -38,8 +38,7 @@
 						<div class="img_card"></div>
 						<div class="card_detail">
 						<button class="circle_detail">
-							<i class="fa fa-hand-pointer-o"></i>
-							Touch to <br> Pay
+							<a href="pay.html"> Touch to <br> Pay</a>
 						</button>
 							<div class="left_detail">
 								<h1>Baht 205.00</h1>
@@ -62,11 +61,11 @@
 			
 					<div class="menu_box">
 					<div class="menu_box_2">
-						<div class="box_menu"><p>HOME</p></div>
-						<div class="box_menu"><p>CARDS</p></div>
-						<div class="box_menu"><p>STORE</p></div>
-						<div class="box_menu"><p>MESSAGE</p></div>
-						<div class="box_menu"><p></p></div>
+						<div class="box_menu"><a href="#"> HOME</a></div>
+						<div class="box_menu"><a href="#">CARDS</a></div>
+						<div class="box_menu"><a href="#">STORE</a></div>
+						<div class="box_menu"><a href="#">MESSAGE</a></div>
+						<div class="box_menu"><a href="#">MORE</a></div>
 					</div><!-- menu_box_2 -->
 					</div><!-- menu_box -->
 
