--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 									<p>49 more Star to reach Gold level</p>
 								</div><!-- p_wrap -->
 							</div><!-- box_wrap_reward -->
-							<button class="button_reward">Reward</button>
+							<button class="button_reward"><a href="reward.html">Reward</a></button>
 					</div><!-- reward_box -->
 				
 				<!-- ------------------------------------------------START CARD-------------------------------------------------- -->
