--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 						</div>
 					</div><!-- card_1 -->
 
-					<button class="manage_button">Manage</button>
+					<button class="manage_button"><a href="manage.html">Manage</a></button>
 					<button class="add_button">Add a card</button>
 		<!-- ------------------------------------------------START ----MENU---------------------------------------------- -->
 
